# irods_client_rest_cpp_beast

./: .clang-tidy  .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  apache_bench.txt  build_packages.sh  config.json.template  irods_builder.Dockerfile  irods_runner.Dockerfile  launch_docker.sh  notes.txt  test.sh  ub-sanitizer-ignorelist.txt
.github/workflows/: build-irods-http-api-ubuntu.yml
core/: CMakeLists.txt
core/include/irods/private/http_api/: common.hpp  crlf_parser.hpp  globals.hpp  log.hpp  multipart_form_data.hpp  openid.hpp  session.hpp  transport.hpp  version.hpp.in
core/src/: common.cpp  crlf_parser.cpp  globals.cpp  main.cpp  multipart_form_data.cpp  openid.cpp  process_stash.cpp  session.cpp  transport.cpp
endpoints/: CMakeLists.txt
endpoints/access_token_handler/: CMakeLists.txt
endpoints/access_token_handler/src/: main.cpp
endpoints/authentication/: CMakeLists.txt
endpoints/authentication/src/: main.cpp
endpoints/collections/: CMakeLists.txt
endpoints/collections/src/: main.cpp
endpoints/data_objects/: CMakeLists.txt
endpoints/data_objects/src/: main.cpp
endpoints/information/: CMakeLists.txt
endpoints/information/src/: main.cpp
endpoints/query/: CMakeLists.txt
endpoints/query/src/: main.cpp
endpoints/resources/: CMakeLists.txt
endpoints/resources/src/: main.cpp
endpoints/rules/: CMakeLists.txt
endpoints/rules/src/: main.cpp
endpoints/shared/: CMakeLists.txt
endpoints/shared/include/irods/private/http_api/: handlers.hpp  shared_api_operations.hpp
endpoints/shared/src/: shared_api_operations.cpp
endpoints/tickets/: CMakeLists.txt
endpoints/tickets/src/: main.cpp
endpoints/users_groups/: CMakeLists.txt
endpoints/users_groups/src/: main.cpp
endpoints/validate-token/src/: main.cpp
endpoints/zones/: CMakeLists.txt
endpoints/zones/src/: main.cpp
plugins/: CMakeLists.txt
plugins/user_mapping/: CMakeLists.txt
plugins/user_mapping/include/irods/http_api/plugins/user_mapping/: interface.h
plugins/user_mapping/src/: local_file.cpp  user_claim.cpp
src/: CMakeLists.txt  common.cpp  common.hpp  crlf_parser.cpp  crlf_parser.hpp  globals.cpp  globals.hpp  log.hpp  main.cpp  process_stash.cpp  process_stash.hpp  session.cpp  session.hpp  version.hpp.in
src/endpoints/: CMakeLists.txt  common.hpp  handlers.hpp  shared_api_operations.cpp  shared_api_operations.hpp
src/endpoints/authentication/: CMakeLists.txt  authentication.cpp  authentication.hpp  impl.cpp
src/endpoints/collections/: CMakeLists.txt  impl.cpp
src/endpoints/data_objects/: CMakeLists.txt  impl.cpp
src/endpoints/information/: CMakeLists.txt  impl.cpp
src/endpoints/metadata/: CMakeLists.txt  impl.cpp
src/endpoints/query/: CMakeLists.txt  impl.cpp
src/endpoints/resources/: CMakeLists.txt  impl.cpp
src/endpoints/rules/: CMakeLists.txt  impl.cpp
src/endpoints/tickets/: CMakeLists.txt  impl.cpp
src/endpoints/users_groups/: CMakeLists.txt  impl.cpp
src/endpoints/zones/: CMakeLists.txt  impl.cpp
test/: README.md  config.py  irods_error_codes.py  test_auth_endpoint.py  test_irods_http_api.py
test/keycloak/: README.md  example-realm-export.json  irods-http-api-keycloak.Dockerfile
