add_subdirectory(shared)

add_subdirectory(authentication)
add_subdirectory(access_token_handler)
add_subdirectory(collections)
#add_subdirectory(config)
add_subdirectory(data_objects)
add_subdirectory(information)
add_subdirectory(query)
add_subdirectory(resources)
add_subdirectory(rules)
add_subdirectory(tickets)
add_subdirectory(users_groups)
add_subdirectory(zones)
