option(IRODS_ENABLE_GENQUERY2 "Enables GenQuery2 support. GenQuery2 package must be installed." NO)

add_subdirectory(authentication)
add_subdirectory(collections)
#add_subdirectory(config)
add_subdirectory(data_objects)
add_subdirectory(information)
add_subdirectory(metadata)
add_subdirectory(query)
add_subdirectory(resources)
add_subdirectory(rules)
add_subdirectory(tickets)
add_subdirectory(users_groups)
add_subdirectory(zones)
